--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css?family=Zen+Tokyo+Zoo');
+
+.logo-top {
+  font-family: 'Zen Tokyo Zoo', sans-serif;
+  font-size: large;
+  font-size: 2.5rem/* 72px */;
+  line-height: 1;
+}
+
+.logo-bottom {
+  font-family: 'Zen Tokyo Zoo', sans-serif;
+  font-size: large;
+  font-size: 3.3rem;
+  line-height: 1;
+}
+
 html,
 body {
   padding: 0;
